--- a/Encoder/assets/svm/base.css
+++ b/Encoder/assets/svm/base.css
@@ -57,14 +57,14 @@ body {
 	line-height: 25px;
 }
 
-#thumbnail{
+#imgThumbnail{
 	padding: 0;
 	min-height: 128px;
 	margin-bottom: 0;
 	background-color: black;
 }
 
-#thumbnail > img, #thumbnail > svg {
+#imgThumbnail > img, #imgThumbnail > svg {
 	height: 100%;
 	width: 100%;
 }
